--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -27,7 +27,7 @@
 }
 
 .popup__button_disabled {
-  background: white;
-  color: #C4C4C4;
-  border: 1px solid #C4C4C4;
+ background: transparent;
+  color: rgba(0,0,0, 0.2);
+ border: 1px solid rgba(0,0,0, 0.2);
 }
